Corrección de mensajes de salida de swagger.
