# Controllers/EstudianteController.go
@@ -23,9 +23,10 @@ import (
 
 // @Summary Lista de estudiantes
 // @Description Lista todos los estudiantes
+// @Tags Estudiantes
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} ResponseMessages.ListEstudiantesResponse "OK"
+// @Success 200 {array} SwaggerMessages.ListEstudiantesSwagger "OK"
 // @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
 // @Router /estudiantes [get]
 func ListEstudiantes(c *gin.Context) {
@@ -55,10 +56,11 @@ func ListEstudiantes(c *gin.Context) {
 
 // @Summary Obtiene un estudiante
 // @Description Obtiene un estudiante según su UUID
+// @Tags Estudiantes
 // @Accept  json
 // @Produce  json
 // @Param   uuid_estudiante     path    string     true        "UUID del estudiante a buscar"
-// @Success 200 {object} ResponseMessages.GetOneEstudianteResponse "OK"
+// @Success 200 {object} SwaggerMessages.GetOneEstudianteSwagger "OK"
 // @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
 // @Router /estudiantes/{uuid_estudiante} [get]
 func GetOneEstudiante(c *gin.Context) {
@@ -91,10 +93,11 @@ func GetOneEstudiante(c *gin.Context) {
 
 // @Summary Agrega un nuevo estudiante
 // @Description Genera un nuevo estudiante con los datos entregados
+// @Tags Estudiantes
 // @Accept  json
 // @Produce  json
 // @Param   input_estudiante     body    RequestMessages.AddNewEstudiantePayload     true        "Estudiante a agregar"
-// @Success 200 {object} ResponseMessages.AddNewEstudianteResponse "OK"
+// @Success 200 {object} SwaggerMessages.AddNewEstudianteSwagger "OK"
 // @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
 // @Router /estudiantes [post]
 func AddNewEstudiante(c *gin.Context) {
@@ -145,11 +148,12 @@ func AddNewEstudiante(c *gin.Context) {
 
 // @Summary Modifica un estudiante
 // @Description Modifica un estudiante con los datos entregados
+// @Tags Estudiantes
 // @Accept  json
 // @Produce  json
 // @Param   uuid_estudiante     path    string     true        "UUID del estudiante a modificar"
 // @Param   input_actualiza_estudiante     body    RequestMessages.PutOneEstudiantePayload     true        "Estudiante a modificar"
-// @Success 200 {object} ResponseMessages.PutOneEstudianteResponse "OK"
+// @Success 200 {object} SwaggerMessages.PutOneEstudianteSwagger "OK"
 // @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
 // @Router /estudiantes/{uuid_estudiante} [put]
 func PutOneEstudiante(c *gin.Context) {
@@ -214,10 +218,11 @@ func PutOneEstudiante(c *gin.Context) {
 
 // @Summary Elimina un estudiante
 // @Description Elimina un estudiante con los datos entregados
+// @Tags Estudiantes
 // @Accept  json
 // @Produce  json
 // @Param   uuid_estudiante     path    string     true        "UUID del estudiante a eliminar"
-// @Success 200 {object} ResponseMessages.DeleteEstudianteResponse "OK"
+// @Success 200 {object} SwaggerMessages.DeleteEstudianteSwagger "OK"
 // @Failure 400 {object} ApiHelpers.ResponseError "Bad request"
 // @Router /estudiantes/{uuid_estudiante} [delete]
 func DeleteEstudiante(c *gin.Context) {
